--- a/11. HTML Templates/tasks/task-3.html
+++ b/11. HTML Templates/tasks/task-3.html
@@ -17,7 +17,7 @@
     <script src="../bower_components/handlebars/handlebars.js"></script>
     <script src="../node_modules/jquery/dist/jquery.js"></script>
     <!-- <script src="task-3.js"></script> -->
-    <script src="task-3-listview"></script>
+    <script src="task-3-listview.js"></script>
     <script type="text/javascript">
     var books = [{
         id: 1,
@@ -35,8 +35,6 @@
     $(document).ready(function() {
         $('#books-list').listview(books);
     });
-
-
 
     // var postTemplateHTML = $('#book-item-template').html();
     // postTemplateHTML =
